--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm a paragraph</p>
+<h1>Hello again!</h1>
+<p>I'm a new paragraph</p>
 </body>
 </html>
